# pyflecs

./: .ruff.toml  .vimrc  LICENSE  README.md  cflecs.py  flecs.py  libflecs.dylib  main.py  pyproject.toml  run
examples/: query_basic.py
src/pyflecs/: adaptor.py  builtins.py  cflecs.py  component.py  entity.py  inspect.py  libflecs.dylib  patch.py  pipeline.py  query.py  string.py  system.py  types.py  world.py
test/: test.py
tests/: test.py  test_component.py  test_system.py
